# deneme_sahasi

./: .gitignore  .python-version  denCode.txt  denpwsh.txt  pyproject.toml  readme.md
basic-web/: index.html  script.js  style.css
c#/: program.cs
c#/console-app/: .gitignore  Program.cs
c#/windows-forms-app/: Form1.Designer.cs  Form1.cs  Program.cs  windows-forms-app.csproj  windows-forms-app.sln
c3/: .gitignore  hello.c3
cVcpp/: deneme.c  for_to_if_else.cpp
cVcpp/buton_check/: button_check.cpp
cVcpp/clock/: main.cpp
cVcpp/cross/: commandline_args.c  for_loop_with_goto.c  pi_terms.c  use_shell_cmd.cpp
cVcpp/sistem-komutlarını-kullanma/: main.cpp
cVcpp/terminal_argümanları_listeleme/: main.c
ekstraa/: den.py  deneme.py  kapala.py  saatkontrol zorla 1.ps1  saatpykontrol.ps1  workspace.code-workspace
go/clock/: .gitignore  main.go
powershell/: delete_empyt_dirs.ps1
problems/: table_0.txt
python/: binary_search.py  calc_pi.py  copyfiles.py  dosya_boytuna göre listeleme.py  example.sav  filename_collect.py  files.txt  lib_dataclass.py  multiple_logical_operators.py  only_deneme.py  renamit.py  satisfactory-save-to-json.py  solve_table_rithm.py  split_to_chars.py  strategy_and_observer_pattern.py  string-enumarate.py  system_hardwate_info.py  updating.terminal.output.py
python/manim_try/: scene.py
python/snv-tabl/: b-aglari.htm  düzenle.py  snv-tbl-finished.json  snv-tbl.json  tbl.html
rust/: .gitignore
rust/clock/: Cargo.toml
weird_programmingthings/: hello_world.poetic  hello_world.turkey  poetic.py  quine.py  readme.md  white_space.ws
(+39 files in other folders)
